--- a/styles/contato.css
+++ b/styles/contato.css
@@ -34,6 +34,8 @@
     color: var(--azul-escuro);
     font-family: var(--fonte-principal);
     background: url("../assets/envelope.svg") no-repeat;
+    background-position: center left;
     padding-left: 2em;
+
 
 }
