--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 @import url("./styles/contato.css");
 @import url("./styles/footer.css");
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -15,6 +15,8 @@
     --azul-degrade: rgb(12, 60, 96);
     --fonte-principal: 'Poppins', sans-serif;
     --azul-escuro: #002F52;
+    --fonte-secundaria: 'Josefin Sans', sans-serif;
+    --preto: #000000;
 }
 
 
