--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -141,3 +141,34 @@
     flex-direction: column;
     gap: 0.5em;
 }
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 60%;
+        margin: 2em auto;
+    }
+
+    .card2 {
+        flex-direction: row;
+        width: 60%;
+        margin: 2em auto;
+    }
+}
