--- a/styles/contato.css
+++ b/styles/contato.css
@@ -39,3 +39,24 @@
 
 
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__descricao {
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contato__input {
+        width: 30%;
+    }
+}
