--- a/styles/header.css
+++ b/styles/header.css
@@ -60,6 +60,60 @@
     display: none;
 }
 
-@media screen and (min-width: 1024px) {
+.container__titulo {
+    display: none;
+}
 
+.opcoes {
+    display: none;
+}
+
+
+@media screen and (min-width: 1024px) {
+    .container__titulo, .container__titulo--negrito {
+        font-size: 30px;
+        font-family: var(--fonte-secundaria);
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opcoes {
+        display: flex;
+        list-style-type: none;
+    }
+
+    .opcoes__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente{
+    display: none;
+    }
+
+    .cabecalho__menu-hamburguer {
+    display: none;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: auto;
+        left: 23em;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
 }
