--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -31,3 +31,14 @@
     font-size: 14px;
 
 }
+
+@media screen and (min-width: 1024px) {
+    .topicos__titulo {
+        font-size: 24px;
+    }
+
+    .topicos__link  {
+        font-size: 16px;
+        padding: 1em 2em;
+    }
+}
