Add Scuba.svg image asset for footer

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     --azul-escuro: #002F52;
     --fonte-secundaria: 'Josefin Sans', sans-serif;
     --preto: #000000;
+    --cinza: #474646;
 }
 
 
