--- a/styles/header.css
+++ b/styles/header.css
@@ -117,3 +117,20 @@
         display: none;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabecalho {
+        padding: 0em 2em ;
+    }
+
+    .opcoes {
+        margin-right: auto;
+    }
+}
