Refatorar estrutura de HTML e CSS para melhorar a semântica e a responsividade

--- a/styles/header.css
+++ b/styles/header.css
@@ -68,6 +68,10 @@
     display: none;
 }
 
+.container__texto {
+    display: none;
+}
+
 
 @media screen and (min-width: 1024px) {
     .container__titulo, .container__titulo--negrito {
@@ -132,5 +136,9 @@
 
     .opcoes {
         margin-right: auto;
+    }
+
+    .container__texto {
+        display: block;
     }
 }
