Remover arquivo Menu Aberto.svg e ajustar referências no CSS para melhorar a responsividade e a estrutura do layout

--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,14 @@
     background-position: center;
 }
 
+.container__botao:checked~.container__rotulo>.cabecalho__menu-hamburguer {
+    background-image: url("../assets/menuAberto.svg");
+}
+
+.container__botao:checked ~ .container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -114,12 +122,31 @@
     .opcoes__botao:checked ~ .lista-menu {
         display: block;
         width: auto;
-        left: 23em;
+        left: 20em;
     }
 
     .opcoes__botao {
         display: none;
     }
+
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opcoes__item {
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+
+    }
+
+    .lista-menu__item:hover .lista-menu__link {
+        color: var(--branco);
+        text-decoration: none
+}
 }
 
 @media screen and (min-width: 1728px) {
@@ -140,5 +167,11 @@
 
     .container__texto {
         display: block;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: 10em;
+        left: 16.3em;
     }
 }
