--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -107,3 +107,37 @@
         margin: 2em auto;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container {
+        display: flex;
+        flex-direction: row;
+        margin: 2em 20vw 3em 20vw;
+        align-items: center;
+    }
+
+    .swiper-pagination {
+        margin: 0;
+    }
+
+    .swiper {
+        width: 110%;
+    }
+
+    .descricao {
+        margin-right: 2em;
+    }
+
+    .descricao__titulo {
+        font-size: 32px;
+    }
+
+    .descricao__texto {
+        font-size: 16px;
+    }
+
+    .card {
+        width: 70%;
+        margin-left: 1em;
+    }
+}
