--- a/styles/footer.css
+++ b/styles/footer.css
@@ -42,3 +42,14 @@ hr {
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .lista-rodape { 
+        border-left: 2px solid rgb(165, 165, 165);
+        padding-left: 2em;
+    }
+
+    .rodape {
+        padding: 3em;
+    }
+}
