--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -42,3 +42,10 @@
         padding: 1em 2em;
     }
 }
+
+@media screen and (min-width : 1728px) {
+    .topicos {
+        padding: 3em 30vw;
+    }
+    
+}
